Fix footer alignment at large size

--- a/src/sass/responsive/_header-footer.scss
+++ b/src/sass/responsive/_header-footer.scss
@@ -204,6 +204,7 @@ a.mybyu, a.sign-in, .open #search-button {
 	#footer-links{
 		.wrapper {
 			margin-right:0;
+			margin-left:9%;
 		}
 		.col {
 			display:inline-block;
